# grok-desktop

./: .gitignore  KNOWN_ISSUES.md  README.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  index.html  package.json  tsconfig.json  vite.config.ts
homebrew-grok-desktop/: README.md
homebrew-grok-desktop/Casks/: grok-desktop.rb
release/github/: v0.1.0.md
scripts/: build-macos-release.sh  package-macos-dmg.sh  render-release-metadata.sh  verify-macos-release.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: diagnostics.rs  grok.rs  mod.rs  prompt_library.rs  scratchpad.rs  settings.rs  workspaces.rs  zoom.rs
src-tauri/src/persistence/: state.rs
src-tauri/src/window/: behavior.rs  events.rs  grok.rs  menu.rs  mod.rs  navigation.rs  restore.rs  setup.rs  shortcuts.rs  tray.rs  zoom.rs
src/lib/components/grok/: GrokSurface.svelte
src/lib/components/prompts/: PromptLibrarySection.svelte
src/lib/components/scratchpad/: ScratchpadPanel.svelte
src/lib/components/settings/: ShellSettings.svelte
src/lib/components/shell/: AppFrame.svelte  CommandPalette.svelte  Sidebar.svelte  StatusBar.svelte  TitleBar.svelte
src/lib/components/workspaces/: WorkspaceSwitcher.svelte
src/lib/constants/: app.ts
src/lib/stores/: app-settings.ts  command-palette.ts  grok-session.ts  prompt-library.ts  scratchpad.ts  sidebar-state.ts  workspaces.ts  zoom-state.ts
src/lib/tauri/: window.ts
